# DATN-Endoscopy-AI

./: .claude  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  SYSTEM_REQUIREMENTS.md  TECHNICAL_DESIGN.md  benchmark_gpu_vs_cpu.py  demo_cpu_mode.py  demo_frame_skipping.py  demo_llava_finetune.py  demo_voice_whisper.py  deploy_llava_gpu.py  docker-compose.yml  export_yolo_torchscript.py  generate_gstshark_report.py  gpu_yolo_server.py  performance_report.md  pyproject.toml  requirements.txt  run_capture.sh  run_with_cpp_plugin.sh  run_with_profiling.sh
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: generic.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
configs/: .env.example  settings.py
frontend/: get-reactbits-html.js  middleware.ts  next.config.ts  package-lock.json  package.json  playwright-capture.js  proxy.ts  reactbits-home.html
frontend/app/: globals.css  layout.tsx  page.tsx  tokens.css
frontend/components/: Footer.tsx  Hero.tsx  NavBar.tsx  disclaimer.tsx  lesion-report-card.tsx  pipeline-graph-section.tsx  pipeline-metrics-section.tsx  session-summary-panel.tsx  video-library-panel.tsx  video-source-modal.tsx
frontend/context/: AnalysisContext.tsx
frontend/hooks/: use-voice-control.ts
frontend/lib/: logger.ts  theme.ts  ws-client.ts
frontend/tests/: home.test.ts
gstreamer_plugin_c/: build.sh
gstreamer_plugin_c/src/: gstyoloinference.h  yolo_runner.h
phase_1/: capture_system.py
phase_1/modules/: __init__.py  gst_yolo_plugin.py  gstreamer_integration.py  gstreamer_pipeline_code.py  gstshark_profiler.py
phase_2/: api_server.py  data_processor.py  import_captured_data.py  process_raw_session.py
plans/: 260506-0530-llm-chatbot-enhancement.md  260506-0610-ollama-llm-chatbot-build.md
plans/260402-1535-llava-med-lora-finetuning/: plan.md
plans/implementation/: voice_control_system.md
plans/reports/: daily-260420-2336-session-summary.md  daily-260421-2342-session-report.md  implementation-progress-analysis-260405-0853.md  presentation-260422-gstreamer-voice-pipeline.md  researcher-260502-1535-openai-gpt4o-vision-api-research.md
scripts/: benchmark_gpu_vs_cpu.py  extract_lab_videos.py  generate-llava-captions.py  generate_gemini_captions.py  generate_instruction_pairs.py  gpu_yolo_server.py  gst_dots_viewer.py  gst_pipeline_graph.py  kaggle-llava-lora-train.ipynb  preprocess_hyperkvasir.py  run_capture.sh  run_gpu_training.sh  run_with_cpp_plugin.sh  run_with_profiling.sh  stream_to_server.sh  train_llava_lora.py
specs/001-baseline/: spec.md
specs/002-video-library-reuse/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-video-upload-modal/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-chatbot-llm-enhancement/: data-model.md  plan.md  research.md  (+2 more)
src/inference/: CMakeLists.txt  build.sh
src/inference/src/: gstyoloinference.cpp  yolo_runner.cpp
(+48 files in other folders)
