[project]
name = "adjustment-version"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "fastapi>=0.124.4",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.2",
    "langgraph>=0.0.26",
    "langsmith>=0.3.45",
    "numpy>=1.24.0,<2.0.0",
    "openai>=1.0.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.0.0",
    "pymongo>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tavily-python>=0.7.14",
    "tiktoken>=0.5.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
    "ultralytics>=8.0.0",
    "uvicorn[standard]>=0.38.0",
]
